lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> { instructions }
Rule 7     instruction -> if
Rule 8     instruction -> loop
Rule 9     instruction -> expression ;
Rule 10    instruction -> return ;
Rule 11    instruction -> assignment ;
Rule 12    instruction -> print ;
Rule 13    instruction -> BREAK ;
Rule 14    instruction -> CONTINUE ;
Rule 15    if -> IF ( expression ) instructions
Rule 16    if -> IF ( expression ) instructions ELSE instructions
Rule 17    loop -> FOR ID = expression : expression instructions
Rule 18    loop -> WHILE ( expression ) instructions
Rule 19    return -> RETURN
Rule 20    return -> RETURN expression
Rule 21    assignment -> assignable = expression
Rule 22    assignment -> assignable ADDASSIGN expression
Rule 23    assignment -> assignable SUBASSIGN expression
Rule 24    assignment -> assignable MULASSIGN expression
Rule 25    assignment -> assignable DIVASSIGN expression
Rule 26    assignable -> ID
Rule 27    assignable -> ID [ expression , expression ]
Rule 28    print -> PRINT printable_list
Rule 29    printable_list -> printable_list , printable
Rule 30    printable_list -> printable
Rule 31    printable -> STRING
Rule 32    printable -> expression
Rule 33    expression -> assignable
Rule 34    expression -> ( expression )
Rule 35    expression -> INTNUM
Rule 36    expression -> FLOATNUM
Rule 37    expression -> matrix
Rule 38    expression -> matrix_function ( expression )
Rule 39    expression -> expression + expression
Rule 40    expression -> expression - expression
Rule 41    expression -> expression * expression
Rule 42    expression -> expression / expression
Rule 43    expression -> - expression
Rule 44    expression -> expression DOTADD expression
Rule 45    expression -> expression DOTSUB expression
Rule 46    expression -> expression DOTMUL expression
Rule 47    expression -> expression DOTDIV expression
Rule 48    expression -> expression < expression
Rule 49    expression -> expression > expression
Rule 50    expression -> expression ELESS expression
Rule 51    expression -> expression EGREATER expression
Rule 52    expression -> expression EQUALS expression
Rule 53    expression -> expression NEQUALS expression
Rule 54    expression -> expression '
Rule 55    matrix -> [ nest_array_1 ]
Rule 56    nest_array_1 -> nest_array_1 , [ nest_array_2 ]
Rule 57    nest_array_1 -> [ nest_array_2 ]
Rule 58    nest_array_2 -> nest_array_2 , expression
Rule 59    nest_array_2 -> expression
Rule 60    matrix_function -> EYE
Rule 61    matrix_function -> ZEROS
Rule 62    matrix_function -> ONES

Terminals, with rules where they appear

'                    : 54
(                    : 15 16 18 34 38
)                    : 15 16 18 34 38
*                    : 41
+                    : 39
,                    : 27 29 56 58
-                    : 40 43
/                    : 42
:                    : 17
;                    : 9 10 11 12 13 14
<                    : 48
=                    : 17 21
>                    : 49
ADDASSIGN            : 22
BREAK                : 13
CONTINUE             : 14
DIVASSIGN            : 25
DOTADD               : 44
DOTDIV               : 47
DOTMUL               : 46
DOTSUB               : 45
EGREATER             : 51
ELESS                : 50
ELSE                 : 16
EQUALS               : 52
EYE                  : 60
FLOATNUM             : 36
FOR                  : 17
ID                   : 17 26 27
IF                   : 15 16
INTNUM               : 35
MULASSIGN            : 24
NEQUALS              : 53
ONES                 : 62
PRINT                : 28
RETURN               : 19 20
STRING               : 31
SUBASSIGN            : 23
WHILE                : 18
ZEROS                : 61
[                    : 27 55 56 57
]                    : 27 55 56 57
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear

assignable           : 21 22 23 24 25 33
assignment           : 11
expression           : 9 15 16 17 17 18 20 21 22 23 24 25 27 27 32 34 38 39 39 40 40 41 41 42 42 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 58 59
if                   : 7
instruction          : 4 5
instructions         : 2 4 6 15 16 16 17 18
instructions_opt     : 1
loop                 : 8
matrix               : 37
matrix_function      : 38
nest_array_1         : 55 56
nest_array_2         : 56 57 58
print                : 12
printable            : 29 30
printable_list       : 28 29
program              : 0
return               : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . loop
    (9) instruction -> . expression ;
    (10) instruction -> . return ;
    (11) instruction -> . assignment ;
    (12) instruction -> . print ;
    (13) instruction -> . BREAK ;
    (14) instruction -> . CONTINUE ;
    (15) if -> . IF ( expression ) instructions
    (16) if -> . IF ( expression ) instructions ELSE instructions
    (17) loop -> . FOR ID = expression : expression instructions
    (18) loop -> . WHILE ( expression ) instructions
    (33) expression -> . assignable
    (34) expression -> . ( expression )
    (35) expression -> . INTNUM
    (36) expression -> . FLOATNUM
    (37) expression -> . matrix
    (38) expression -> . matrix_function ( expression )
    (39) expression -> . expression + expression
    (40) expression -> . expression - expression
    (41) expression -> . expression * expression
    (42) expression -> . expression / expression
    (43) expression -> . - expression
    (44) expression -> . expression DOTADD expression
    (45) expression -> . expression DOTSUB expression
    (46) expression -> . expression DOTMUL expression
    (47) expression -> . expression DOTDIV expression
    (48) expression -> . expression < expression
    (49) expression -> . expression > expression
    (50) expression -> . expression ELESS expression
    (51) expression -> . expression EGREATER expression
    (52) expression -> . expression EQUALS expression
    (53) expression -> . expression NEQUALS expression
    (54) expression -> . expression '
    (19) return -> . RETURN
    (20) return -> . RETURN expression
    (21) assignment -> . assignable = expression
    (22) assignment -> . assignable ADDASSIGN expression
    (23) assignment -> . assignable SUBASSIGN expression
    (24) assignment -> . assignable MULASSIGN expression
    (25) assignment -> . assignable DIVASSIGN expression
    (28) print -> . PRINT printable_list
    (26) assignable -> . ID
    (27) assignable -> . ID [ expression , expression ]
    (55) matrix -> . [ nest_array_1 ]
    (60) matrix_function -> . EYE
    (61) matrix_function -> . ZEROS
    (62) matrix_function -> . ONES

    $end            reduce using rule 3 (instructions_opt -> .)
    {               shift and go to state 5
    BREAK           shift and go to state 12
    CONTINUE        shift and go to state 13
    IF              shift and go to state 14
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    (               shift and go to state 15
    INTNUM          shift and go to state 20
    FLOATNUM        shift and go to state 21
    -               shift and go to state 24
    RETURN          shift and go to state 25
    PRINT           shift and go to state 26
    ID              shift and go to state 17
    [               shift and go to state 27
    EYE             shift and go to state 28
    ZEROS           shift and go to state 29
    ONES            shift and go to state 30

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    if                             shift and go to state 6
    loop                           shift and go to state 7
    expression                     shift and go to state 8
    return                         shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    assignable                     shift and go to state 19
    matrix                         shift and go to state 22
    matrix_function                shift and go to state 23

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . loop
    (9) instruction -> . expression ;
    (10) instruction -> . return ;
    (11) instruction -> . assignment ;
    (12) instruction -> . print ;
    (13) instruction -> . BREAK ;
    (14) instruction -> . CONTINUE ;
    (15) if -> . IF ( expression ) instructions
    (16) if -> . IF ( expression ) instructions ELSE instructions
    (17) loop -> . FOR ID = expression : expression instructions
    (18) loop -> . WHILE ( expression ) instructions
    (33) expression -> . assignable
    (34) expression -> . ( expression )
    (35) expression -> . INTNUM
    (36) expression -> . FLOATNUM
    (37) expression -> . matrix
    (38) expression -> . matrix_function ( expression )
    (39) expression -> . expression + expression
    (40) expression -> . expression - expression
    (41) expression -> . expression * expression
    (42) expression -> . expression / expression
    (43) expression -> . - expression
    (44) expression -> . expression DOTADD expression
    (45) expression -> . expression DOTSUB expression
    (46) expression -> . expression DOTMUL expression
    (47) expression -> . expression DOTDIV expression
    (48) expression -> . expression < expression
    (49) expression -> . expression > expression
    (50) expression -> . expression ELESS expression
    (51) expression -> . expression EGREATER expression
    (52) expression -> . expression EQUALS expression
    (53) expression -> . expression NEQUALS expression
    (54) expression -> . expression '
    (19) return -> . RETURN
    (20) return -> . RETURN expression
    (21) assignment -> . assignable = expression
    (22) assignment -> . assignable ADDASSIGN expression
    (23) assignment -> . assignable SUBASSIGN expression
    (24) assignment -> . assignable MULASSIGN expression
    (25) assignment -> . assignable DIVASSIGN expression
    (28) print -> . PRINT printable_list
    (26) assignable -> . ID
    (27) assignable -> . ID [ expression , expression ]
    (55) matrix -> . [ nest_array_1 ]
    (60) matrix_function -> . EYE
    (61) matrix_function -> . ZEROS
    (62) matrix_function -> . ONES

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    {               shift and go to state 5
    BREAK           shift and go to state 12
    CONTINUE        shift and go to state 13
    IF              shift and go to state 14
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    (               shift and go to state 15
    INTNUM          shift and go to state 20
    FLOATNUM        shift and go to state 21
    -               shift and go to state 24
    RETURN          shift and go to state 25
    PRINT           shift and go to state 26
    ID              shift and go to state 17
    [               shift and go to state 27
    EYE             shift and go to state 28
    ZEROS           shift and go to state 29
    ONES            shift and go to state 30

    instruction                    shift and go to state 31
    if                             shift and go to state 6
    loop                           shift and go to state 7
    expression                     shift and go to state 8
    return                         shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    assignable                     shift and go to state 19
    matrix                         shift and go to state 22
    matrix_function                shift and go to state 23

state 4

    (5) instructions -> instruction .

    {               reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    (               reduce using rule 5 (instructions -> instruction .)
    INTNUM          reduce using rule 5 (instructions -> instruction .)
    FLOATNUM        reduce using rule 5 (instructions -> instruction .)
    -               reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    [               reduce using rule 5 (instructions -> instruction .)
    EYE             reduce using rule 5 (instructions -> instruction .)
    ZEROS           reduce using rule 5 (instructions -> instruction .)
    ONES            reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)
    ELSE            reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . loop
    (9) instruction -> . expression ;
    (10) instruction -> . return ;
    (11) instruction -> . assignment ;
    (12) instruction -> . print ;
    (13) instruction -> . BREAK ;
    (14) instruction -> . CONTINUE ;
    (15) if -> . IF ( expression ) instructions
    (16) if -> . IF ( expression ) instructions ELSE instructions
    (17) loop -> . FOR ID = expression : expression instructions
    (18) loop -> . WHILE ( expression ) instructions
    (33) expression -> . assignable
    (34) expression -> . ( expression )
    (35) expression -> . INTNUM
    (36) expression -> . FLOATNUM
    (37) expression -> . matrix
    (38) expression -> . matrix_function ( expression )
    (39) expression -> . expression + expression
    (40) expression -> . expression - expression
    (41) expression -> . expression * expression
    (42) expression -> . expression / expression
    (43) expression -> . - expression
    (44) expression -> . expression DOTADD expression
    (45) expression -> . expression DOTSUB expression
    (46) expression -> . expression DOTMUL expression
    (47) expression -> . expression DOTDIV expression
    (48) expression -> . expression < expression
    (49) expression -> . expression > expression
    (50) expression -> . expression ELESS expression
    (51) expression -> . expression EGREATER expression
    (52) expression -> . expression EQUALS expression
    (53) expression -> . expression NEQUALS expression
    (54) expression -> . expression '
    (19) return -> . RETURN
    (20) return -> . RETURN expression
    (21) assignment -> . assignable = expression
    (22) assignment -> . assignable ADDASSIGN expression
    (23) assignment -> . assignable SUBASSIGN expression
    (24) assignment -> . assignable MULASSIGN expression
    (25) assignment -> . assignable DIVASSIGN expression
    (28) print -> . PRINT printable_list
    (26) assignable -> . ID
    (27) assignable -> . ID [ expression , expression ]
    (55) matrix -> . [ nest_array_1 ]
    (60) matrix_function -> . EYE
    (61) matrix_function -> . ZEROS
    (62) matrix_function -> . ONES

    {               shift and go to state 5
    BREAK           shift and go to state 12
    CONTINUE        shift and go to state 13
    IF              shift and go to state 14
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    (               shift and go to state 15
    INTNUM          shift and go to state 20
    FLOATNUM        shift and go to state 21
    -               shift and go to state 24
    RETURN          shift and go to state 25
    PRINT           shift and go to state 26
    ID              shift and go to state 17
    [               shift and go to state 27
    EYE             shift and go to state 28
    ZEROS           shift and go to state 29
    ONES            shift and go to state 30

    instructions                   shift and go to state 32
    instruction                    shift and go to state 4
    if                             shift and go to state 6
    loop                           shift and go to state 7
    expression                     shift and go to state 8
    return                         shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    assignable                     shift and go to state 19
    matrix                         shift and go to state 22
    matrix_function                shift and go to state 23

state 6

    (7) instruction -> if .

    {               reduce using rule 7 (instruction -> if .)
    BREAK           reduce using rule 7 (instruction -> if .)
    CONTINUE        reduce using rule 7 (instruction -> if .)
    IF              reduce using rule 7 (instruction -> if .)
    FOR             reduce using rule 7 (instruction -> if .)
    WHILE           reduce using rule 7 (instruction -> if .)
    (               reduce using rule 7 (instruction -> if .)
    INTNUM          reduce using rule 7 (instruction -> if .)
    FLOATNUM        reduce using rule 7 (instruction -> if .)
    -               reduce using rule 7 (instruction -> if .)
    RETURN          reduce using rule 7 (instruction -> if .)
    PRINT           reduce using rule 7 (instruction -> if .)
    ID              reduce using rule 7 (instruction -> if .)
    [               reduce using rule 7 (instruction -> if .)
    EYE             reduce using rule 7 (instruction -> if .)
    ZEROS           reduce using rule 7 (instruction -> if .)
    ONES            reduce using rule 7 (instruction -> if .)
    $end            reduce using rule 7 (instruction -> if .)
    }               reduce using rule 7 (instruction -> if .)
    ELSE            reduce using rule 7 (instruction -> if .)


state 7

    (8) instruction -> loop .

    {               reduce using rule 8 (instruction -> loop .)
    BREAK           reduce using rule 8 (instruction -> loop .)
    CONTINUE        reduce using rule 8 (instruction -> loop .)
    IF              reduce using rule 8 (instruction -> loop .)
    FOR             reduce using rule 8 (instruction -> loop .)
    WHILE           reduce using rule 8 (instruction -> loop .)
    (               reduce using rule 8 (instruction -> loop .)
    INTNUM          reduce using rule 8 (instruction -> loop .)
    FLOATNUM        reduce using rule 8 (instruction -> loop .)
    -               reduce using rule 8 (instruction -> loop .)
    RETURN          reduce using rule 8 (instruction -> loop .)
    PRINT           reduce using rule 8 (instruction -> loop .)
    ID              reduce using rule 8 (instruction -> loop .)
    [               reduce using rule 8 (instruction -> loop .)
    EYE             reduce using rule 8 (instruction -> loop .)
    ZEROS           reduce using rule 8 (instruction -> loop .)
    ONES            reduce using rule 8 (instruction -> loop .)
    $end            reduce using rule 8 (instruction -> loop .)
    }               reduce using rule 8 (instruction -> loop .)
    ELSE            reduce using rule 8 (instruction -> loop .)


state 8

    (9) instruction -> expression . ;
    (39) expression -> expression . + expression
    (40) expression -> expression . - expression
    (41) expression -> expression . * expression
    (42) expression -> expression . / expression
    (44) expression -> expression . DOTADD expression
    (45) expression -> expression . DOTSUB expression
    (46) expression -> expression . DOTMUL expression
    (47) expression -> expression . DOTDIV expression
    (48) expression -> expression . < expression
    (49) expression -> expression . > expression
    (50) expression -> expression . ELESS expression
    (51) expression -> expression . EGREATER expression
    (52) expression -> expression . EQUALS expression
    (53) expression -> expression . NEQUALS expression
    (54) expression -> expression . '

    ;               shift and go to state 33
    +               shift and go to state 34
    -               shift and go to state 35
    *               shift and go to state 36
    /               shift and go to state 37
    DOTADD          shift and go to state 38
    DOTSUB          shift and go to state 39
    DOTMUL          shift and go to state 40
    DOTDIV          shift and go to state 41
    <               shift and go to state 42
    >               shift and go to state 43
    ELESS           shift and go to state 44
    EGREATER        shift and go to state 45
    EQUALS          shift and go to state 46
    NEQUALS         shift and go to state 47
    '               shift and go to state 48


state 9

    (10) instruction -> return . ;

    ;               shift and go to state 49


state 10

    (11) instruction -> assignment . ;

    ;               shift and go to state 50


state 11

    (12) instruction -> print . ;

    ;               shift and go to state 51


state 12

    (13) instruction -> BREAK . ;

    ;               shift and go to state 52


state 13

    (14) instruction -> CONTINUE . ;

    ;               shift and go to state 53


state 14

    (15) if -> IF . ( expression ) instructions
    (16) if -> IF . ( expression ) instructions ELSE instructions

    (               shift and go to state 54


state 15

    (34) expression -> ( . expression )
    (33) expression -> . assignable
    (34) expression -> . ( expression )
    (35) expression -> . INTNUM
    (36) expression -> . FLOATNUM
    (37) expression -> . matrix
    (38) expression -> . matrix_function ( expression )
    (39) expression -> . expression + expression
    (40) expression -> . expression - expression
    (41) expression -> . expression * expression
    (42) expression -> . expression / expression
    (43) expression -> . - expression
    (44) expression -> . expression DOTADD expression
    (45) expression -> . expression DOTSUB expression
    (46) expression -> . expression DOTMUL expression
    (47) expression -> . expression DOTDIV expression
    (48) expression -> . expression < expression
    (49) expression -> . expression > expression
    (50) expression -> . expression ELESS expression
    (51) expression -> . expression EGREATER expression
    (52) expression -> . expression EQUALS expression
    (53) expression -> . expression NEQUALS expression
    (54) expression -> . expression '
    (26) assignable -> . ID
    (27) assignable -> . ID [ expression , expression ]
    (55) matrix -> . [ nest_array_1 ]
    (60) matrix_function -> . EYE
    (61) matrix_function -> . ZEROS
    (62) matrix_function -> . ONES

    (               shift and go to state 15
    INTNUM          shift and go to state 20
    FLOATNUM        shift and go to state 21
    -               shift and go to state 24
    ID              shift and go to state 17
    [               shift and go to state 27
    EYE             shift and go to state 28
    ZEROS           shift and go to state 29
    ONES            shift and go to state 30

    expression                     shift and go to state 55
    assignable                     shift and go to state 56
    matrix                         shift and go to state 22
    matrix_function                shift and go to state 23

state 16

    (17) loop -> FOR . ID = expression : expression instructions

    ID              shift and go to state 57


state 17

    (26) assignable -> ID .
    (27) assignable -> ID . [ expression , expression ]

  ! shift/reduce conflict for [ resolved as shift
    =               reduce using rule 26 (assignable -> ID .)
    ADDASSIGN       reduce using rule 26 (assignable -> ID .)
    SUBASSIGN       reduce using rule 26 (assignable -> ID .)
    MULASSIGN       reduce using rule 26 (assignable -> ID .)
    DIVASSIGN       reduce using rule 26 (assignable -> ID .)
    ;               reduce using rule 26 (assignable -> ID .)
    +               reduce using rule 26 (assignable -> ID .)
    -               reduce using rule 26 (assignable -> ID .)
    *               reduce using rule 26 (assignable -> ID .)
    /               reduce using rule 26 (assignable -> ID .)
    DOTADD          reduce using rule 26 (assignable -> ID .)
    DOTSUB          reduce using rule 26 (assignable -> ID .)
    DOTMUL          reduce using rule 26 (assignable -> ID .)
    DOTDIV          reduce using rule 26 (assignable -> ID .)
    <               reduce using rule 26 (assignable -> ID .)
    >               reduce using rule 26 (assignable -> ID .)
    ELESS           reduce using rule 26 (assignable -> ID .)
    EGREATER        reduce using rule 26 (assignable -> ID .)
    EQUALS          reduce using rule 26 (assignable -> ID .)
    NEQUALS         reduce using rule 26 (assignable -> ID .)
    '               reduce using rule 26 (assignable -> ID .)
    )               reduce using rule 26 (assignable -> ID .)
    ,               reduce using rule 26 (assignable -> ID .)
    ]               reduce using rule 26 (assignable -> ID .)
    :               reduce using rule 26 (assignable -> ID .)
    {               reduce using rule 26 (assignable -> ID .)
    BREAK           reduce using rule 26 (assignable -> ID .)
    CONTINUE        reduce using rule 26 (assignable -> ID .)
    IF              reduce using rule 26 (assignable -> ID .)
    FOR             reduce using rule 26 (assignable -> ID .)
    WHILE           reduce using rule 26 (assignable -> ID .)
    (               reduce using rule 26 (assignable -> ID .)
    INTNUM          reduce using rule 26 (assignable -> ID .)
    FLOATNUM        reduce using rule 26 (assignable -> ID .)
    RETURN          reduce using rule 26 (assignable -> ID .)
    PRINT           reduce using rule 26 (assignable -> ID .)
    ID              reduce using rule 26 (assignable -> ID .)
    EYE             reduce using rule 26 (assignable -> ID .)
    ZEROS           reduce using rule 26 (assignable -> ID .)
    ONES            reduce using rule 26 (assignable -> ID .)
    [               shift and go to state 58

  ! [               [ reduce using rule 26 (assignable -> ID .) ]


state 18

    (18) loop -> WHILE . ( expression ) instructions

    (               shift and go to state 59


state 19

    (33) expression -> assignable .
    (21) assignment -> assignable . = expression
    (22) assignment -> assignable . ADDASSIGN expression
    (23) assignment -> assignable . SUBASSIGN expression
    (24) assignment -> assignable . MULASSIGN expression
    (25) assignment -> assignable . DIVASSIGN expression

    ;               reduce using rule 33 (expression -> assignable .)
    +               reduce using rule 33 (expression -> assignable .)
    -               reduce using rule 33 (expression -> assignable .)
    *               reduce using rule 33 (expression -> assignable .)
    /               reduce using rule 33 (expression -> assignable .)
    DOTADD          reduce using rule 33 (expression -> assignable .)
    DOTSUB          reduce using rule 33 (expression -> assignable .)
    DOTMUL          reduce using rule 33 (expression -> assignable .)
    DOTDIV          reduce using rule 33 (expression -> assignable .)
    <               reduce using rule 33 (expression -> assignable .)
    >               reduce using rule 33 (expression -> assignable .)
    ELESS           reduce using rule 33 (expression -> assignable .)
    EGREATER        reduce using rule 33 (expression -> assignable .)
    EQUALS          reduce using rule 33 (expression -> assignable .)
    NEQUALS         reduce using rule 33 (expression -> assignable .)
    '               reduce using rule 33 (expression -> assignable .)
    =               shift and go to state 60
    ADDASSIGN       shift and go to state 61
    SUBASSIGN       shift and go to state 62
    MULASSIGN       shift and go to state 63
    DIVASSIGN       shift and go to state 64


state 20

    (35) expression -> INTNUM .

    ;               reduce using rule 35 (expression -> INTNUM .)
    +               reduce using rule 35 (expression -> INTNUM .)
    -               reduce using rule 35 (expression -> INTNUM .)
    *               reduce using rule 35 (expression -> INTNUM .)
    /               reduce using rule 35 (expression -> INTNUM .)
    DOTADD          reduce using rule 35 (expression -> INTNUM .)
    DOTSUB          reduce using rule 35 (expression -> INTNUM .)
    DOTMUL          reduce using rule 35 (expression -> INTNUM .)
    DOTDIV          reduce using rule 35 (expression -> INTNUM .)
    <               reduce using rule 35 (expression -> INTNUM .)
    >               reduce using rule 35 (expression -> INTNUM .)
    ELESS           reduce using rule 35 (expression -> INTNUM .)
    EGREATER        reduce using rule 35 (expression -> INTNUM .)
    EQUALS          reduce using rule 35 (expression -> INTNUM .)
    NEQUALS         reduce using rule 35 (expression -> INTNUM .)
    '               reduce using rule 35 (expression -> INTNUM .)
    )               reduce using rule 35 (expression -> INTNUM .)
    ,               reduce using rule 35 (expression -> INTNUM .)
    ]               reduce using rule 35 (expression -> INTNUM .)
    :               reduce using rule 35 (expression -> INTNUM .)
    {               reduce using rule 35 (expression -> INTNUM .)
    BREAK           reduce using rule 35 (expression -> INTNUM .)
    CONTINUE        reduce using rule 35 (expression -> INTNUM .)
    IF              reduce using rule 35 (expression -> INTNUM .)
    FOR             reduce using rule 35 (expression -> INTNUM .)
    WHILE           reduce using rule 35 (expression -> INTNUM .)
    (               reduce using rule 35 (expression -> INTNUM .)
    INTNUM          reduce using rule 35 (expression -> INTNUM .)
    FLOATNUM        reduce using rule 35 (expression -> INTNUM .)
    RETURN          reduce using rule 35 (expression -> INTNUM .)
    PRINT           reduce using rule 35 (expression -> INTNUM .)
    ID              reduce using rule 35 (expression -> INTNUM .)
    [               reduce using rule 35 (expression -> INTNUM .)
    EYE             reduce using rule 35 (expression -> INTNUM .)
    ZEROS           reduce using rule 35 (expression -> INTNUM .)
    ONES            reduce using rule 35 (expression -> INTNUM .)


state 21

    (36) expression -> FLOATNUM .

    ;               reduce using rule 36 (expression -> FLOATNUM .)
    +               reduce using rule 36 (expression -> FLOATNUM .)
    -               reduce using rule 36 (expression -> FLOATNUM .)
    *               reduce using rule 36 (expression -> FLOATNUM .)
    /               reduce using rule 36 (expression -> FLOATNUM .)
    DOTADD          reduce using rule 36 (expression -> FLOATNUM .)
    DOTSUB          reduce using rule 36 (expression -> FLOATNUM .)
    DOTMUL          reduce using rule 36 (expression -> FLOATNUM .)
    DOTDIV          reduce using rule 36 (expression -> FLOATNUM .)
    <               reduce using rule 36 (expression -> FLOATNUM .)
    >               reduce using rule 36 (expression -> FLOATNUM .)
    ELESS           reduce using rule 36 (expression -> FLOATNUM .)
    EGREATER        reduce using rule 36 (expression -> FLOATNUM .)
    EQUALS          reduce using rule 36 (expression -> FLOATNUM .)
    NEQUALS         reduce using rule 36 (expression -> FLOATNUM .)
    '               reduce using rule 36 (expression -> FLOATNUM .)
    )               reduce using rule 36 (expression -> FLOATNUM .)
    ,               reduce using rule 36 (expression -> FLOATNUM .)
    ]               reduce using rule 36 (expression -> FLOATNUM .)
    :               reduce using rule 36 (expression -> FLOATNUM .)
    {               reduce using rule 36 (expression -> FLOATNUM .)
    BREAK           reduce using rule 36 (expression -> FLOATNUM .)
    CONTINUE        reduce using rule 36 (expression -> FLOATNUM .)
    IF              reduce using rule 36 (expression -> FLOATNUM .)
    FOR             reduce using rule 36 (expression -> FLOATNUM .)
    WHILE           reduce using rule 36 (expression -> FLOATNUM .)
    (               reduce using rule 36 (expression -> FLOATNUM .)
    INTNUM          reduce using rule 36 (expression -> FLOATNUM .)
    FLOATNUM        reduce using rule 36 (expression -> FLOATNUM .)
    RETURN          reduce using rule 36 (expression -> FLOATNUM .)
    PRINT           reduce using rule 36 (expression -> FLOATNUM .)
    ID              reduce using rule 36 (expression -> FLOATNUM .)
    [               reduce using rule 36 (expression -> FLOATNUM .)
    EYE             reduce using rule 36 (expression -> FLOATNUM .)
    ZEROS           reduce using rule 36 (expression -> FLOATNUM .)
    ONES            reduce using rule 36 (expression -> FLOATNUM .)


state 22

    (37) expression -> matrix .
